@@ -30,12 +30,24 @@
  * -------------------------------------------------------------------------
  */
 
-#include <ctime>
+#include <itpp/config.h>
 #include <iostream>
 #include <cmath>
-#ifndef _MSC_VER
-#include <sys/time.h>
+#ifdef TIME_WITH_SYS_TIME
+#  include <sys/time.h>
+#  include <ctime>
+#else
+#  ifdef HAVE_SYS_TIME_H
+#    include <sys/time.h>
+#  else
+#    include <ctime>
+#  endif
 #endif
+
+// #include <ctime>
+// #ifndef _MSC_VER
+// #include <sys/time.h>
+// #endif
 
 #include <itpp/base/timing.h>
 
